memperbaiki isi gallery

--- a/index.html
+++ b/index.html
@@ -169,28 +169,22 @@
           <div class="swiper mySwiper sgallery mt-2">
             <div class="swiper-wrapper">
               <div class="swiper-slide ss0">
-                <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                <img src="gallery/gallery1.jpg" />
               </div>
               <div class="swiper-slide ss0">
-                <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                <img src="gallery/gallery2.jpg" />
               </div>
               <div class="swiper-slide ss0">
-                <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                <img src="gallery/gallery3.jpg" />
               </div>
               <div class="swiper-slide ss0">
-                <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                <img src="gallery/gallery4.jpg" />
               </div>
               <div class="swiper-slide ss0">
-                <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                <img src="gallery/gallery5.jpg" />
               </div>
               <div class="swiper-slide ss0">
-                <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-              </div>
-              <div class="swiper-slide ss0">
-                <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-              </div>
-              <div class="swiper-slide ss0">
-                <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                <img src="gallery/gallery6.jpg" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
