--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <p>Gimana? Kamu suka kan? Semoga aja suka sii, aku buatnya udah lama banget, capeek. Terus bagus ngga byy? bagus laah, aku buatnya dengan penuh perasaan dan semangat ogh. Xixixi</p>
             <p>
               Waktu kamu dulu nge share reels ke aku yang isinya kalau dipencet ada pesannya, kamu bilang "apik". Terus ya aku janji mau buatin yang kaya di reels itu ke kamu. Kamu paling udah lupa
-              si, apa masih ingat? Jujur aku mau lupa lho, hehe.
+              si, apa masih ingat? Jujur aku mau lupa lho, hehe
             </p>
             <p>Bingung mau ngomong apalagi. Umm...</p>
             <p>Pokoknya ya itu si, ini websitenya, udah aku buatin dengan spesial untuk kamu. Semoga aja kamu suka. Aamiin</p>
@@ -241,7 +241,7 @@
             </p>
             <p>Sama kalau ada sesuatu ngomong aja sama aku, apapun itu. Mau itu suatu hal yang bagus banget, bagus, biasa, jelek, jelek banget, sampai jelek banget banget.</p>
             <p>Ihh, capek Byy, ngetik terus. Udah si, gitu aja. Kalau terlalu lama baca ini entar matanya sakit, lihat layar terus. Xixixi. Maaf ya Byy Byy Sayang</p>
-            <p>Terimkasih udah sering ada buat aku Byy Byy. I Love You Byy, banyak love nya, sampai ngga kehitung</p>
+            <p>Terimakasih udah sering ada buat aku Byy Byy. I Love You Byy, banyak love nya, sampai ngga kehitung</p>
             <p>Dari pacarmu yang nyebelin, Farezi :)</p>
           </div>
         </div>
