nambah pesan di massage

--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
             </p>
             <p>Sama kalau ada sesuatu ngomong aja sama aku, apapun itu. Mau itu suatu hal yang bagus banget, bagus, biasa, jelek, jelek banget, sampai jelek banget banget.</p>
             <p>Ihh, capek Byy, ngetik terus. Udah si, gitu aja. Kalau terlalu lama baca ini entar matanya sakit, lihat layar terus. Xixixi. Maaf ya Byy Byy Sayang</p>
+            <p>
+              Kalau masih ada yang kurang dari website yang aku buat ini, minta maaf ya Byy Byy. Maklum masih belajar, xixi. Berjalannya waktu website ini tak kembangin terus, supaya jadi lebih bagus
+            </p>
             <p>Terimakasih udah sering ada buat aku Byy Byy. I Love You Byy, banyak love nya, sampai ngga kehitung</p>
             <p>Dari pacarmu yang nyebelin, Farezi :)</p>
           </div>
