benerin pesan di about us dan letak cal1

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
           <div class="col-about col-md-12">
             <h1 class="text-center fw-bold mb-4 mt-4">About Us</h1>
             <p class="text-center mt-2 mb-4">
-              Awalnya ketemuan di rumah orang buat kerja bareng. Pokoknya aneh banget si, dari awal banget ketemuan sampai jadian kita jarang banget banget dan banget ngomong. Akhirnya, tanggal 15
-              Juni, 2021 kita jadian. Kalau diingat ingat buat ngakak plis, huhuw. Apalagi pas jadiannya, lucu banget
+              Awalnya ketemuan di rumah orang buat kerja bareng. Pokoknya aneh banget si, dari awal banget ketemuan sampai ditembak sama Farez kita jarang banget banget dan banget ngomong,banyak
+              banget ceritanya, ngga bisa diceritakan atau diungkapkan disini. Kalau diingat ingat buat ngakak plis, huhuw. Apalagi pas ditembak sama Farez, lucu banget
             </p>
           </div>
         </div>
         <div class="row agedate justify-content-around">
           <div class="col-md-6 align-items-center text-center">
-            <img class="age" src="img/cal.png" alt="age" />
+            <img class="age mb-4" src="img/cal.png" alt="age" />
             <div class="umurhubungan">
               <script>
                 var dob = new Date('06/15/2021');
