--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </div>
         <div class="row agedate justify-content-around">
           <div class="col-md-6 align-items-center text-center">
-            <img class="age mb-4" src="img/cal.png" alt="age" />
-            <div class="umurhubungan">
+            <img class="age" src="img/cal.png" alt="age" />
+            <div class="umurhubungan mb-5">
               <script>
                 var dob = new Date('06/15/2021');
                 //calculate month difference from current date in time
